docs/v1.0.0/Version-History.md
## [Version History](#Version-History)


| Version | Last Updated | Author |  Release Note|
| ---- | ---- | ---- | ---- |
| v6.8.16 | 03 September 2021 | MapmyIndia API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |   Added distance in Autosuggest API response |
| v6.8.15 | 18 August 2021 | MapmyIndia API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |  -Added Nearby Report API call<br/>-Added hyperlocal in Autosuggest |
| v6.8.14 | 24 May 2021 | MapmyIndia API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |  Added MapmyIndia Style support |
| v6.8.13 | 19 May 2021 | MapmyIndia API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |  Fixes Android Auto related Issue |
| v6.8.12 | 07 May 2021 | MapmyIndia API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |  Fixes On Map Ready related Issue |
| v6.8.11 | 26 April 2021 | MapmyIndia API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |  - Added Page Info in Nearby API response<br/>- Added Android Auto Support |
| v6.8.10 | 01 February 2021 | MapmyIndia API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |  -Added eLoc Support in Direction API calls<br/>-Added eLoc Support in Distance Api call<br/>-Added Support for Many to many in Distance API call |
| v6.8.9 | 25 November 2020 | MapmyIndia API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |  -Updated nearby API calls<br/>-Added new place details API call<br/>-Added options to add marker using eloc |
| v6.8.8 | 06 November 2020 | MapmyIndia API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |  -Improved map loading time |
| v6.8.5 | 26 August 2020 | MapmyIndia API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |  -Added Along the route API support<br/>-Fixes blank tile issue |
| v6.8.4 | 14 August 2020 | MapmyIndia API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |  Added EV Charging station support in Nearby API. |
| v6.8.3 | 23 July 2020 | MapmyIndia API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |  🐞 Bug Fixes |
| v6.8.2 | 16 June 2020 | MapmyIndia API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |   Added Options to check current location safety |
| v6.8.1 | 31 May 2020 | MapmyIndia API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |   🐞 Bug fixes|
| v6.8.0 | 27 May 2020 | MapmyIndia API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |   Now enable/disable interactive layer using our maps sdk |
| v6.7.14 | 28 April 2020 | MapmyIndia API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |  Added MapmyIndia Safety plugin |
|v6.7.13 | 12 May 2020| MapmyIndia API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | Functions added to enable/disable dem and monument icons
|  v6.7.12 | 26 March 2020 | MapmyIndia API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | Indoor related bug fixes and bug fixes in rest api calls
| v6.7.10| 29 Jan 2020 | MapmyIndia API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) | Changed rest API calls for better kotlin support
| v6.7.9 |  6 Dec 2019 | MapmyIndia API Team ([MA](https://github.com/mdakram)) ([ST](https://github.com/saksham66)) |  Indoor maps are now supported with controls and callbacks for switching between different levels as well as getting the layer control only when the map has an indoor component within viewbounds.
|v6.7.8 | 25 Oct 2019 | MapmyIndia API Team ([MA](https://github.com/mdakram)) |  Added support for Myanmar throughout all components: Maps, RESTful API methods available through the SDK> Available in both Vector & legacy Raster SDK.
| v6.7.7| 29 Sep 2019 | MapmyIndia API Team ([MA](https://github.com/mdakram)) | - Retrofit  v2.6 Support  <br/>- Pedestrian Routing API integration in SDK <br/> - Biking Routing API integration in SDK <br/>- Aggressive Routing Resource integrated in both Routing & Distance Matrix methods.<br/>- Able to show flight path polyline via dashed style<br/>- Polyline with gradient colors now available.<br/>- Marker position Animation: Let's a developer animate the transition of marker's position from 1 geocoordinate to another.<br/>- Marker Rotation Animation: Let's a developer animate the rotation of marker, rather than using several markers of different heading for pseudo-animation of marker.<br/>- Marker icon mutation > animated transition to another icon
| v6.7.6 | 29 Sep 2019 | MapmyIndia API Team ([MA](https://github.com/mdakram)) | Fixes Unknown pbf field type exception
|v6.7.5 | 5 Sep 2019 | MapmyIndia API Team ([MA](https://github.com/mdakram)) |  Fixes native library loading error